Modifying Intro to Networkx

--- a/Intro_to_Networkx.ipynb
+++ b/Intro_to_Networkx.ipynb
@@ -2,127 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "### <p style=\"text-align: right;\"> &#9989; **Put your name here** </p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "# Day 9 In-Class Assignment: Graph Theory\n",
-    "<a href=\"http://sixdegrees.hu/last.fm/\"><img src=\"http://sixdegrees.hu/last.fm/images/lastfm_360_graph_white.png\"><p style=\"text-align: right;\">\n",
-    "network of musicians\n",
-    "</p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "### Agenda for today's class\n",
-    "\n",
-    "</p>\n",
-    "\n",
-    "1. Review of pre-class assignment (10 minutes)\n",
-    "1. Getting familiar with graphs\n",
-    "    - Seven Bridges of Königsberg (15 minutes)\n",
-    "    - The Game of Sprouts (15 minutes)\n",
-    "    - Working with networkx (60 minutes)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "# 1. Review of pre-class assignment\n",
+    "## Introduction to Networkx\n",
     "\n",
-    "We'll briefly discuss Graph Theory and address any specific questions that came up in the pre-class assignment."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "# 2. Getting familiar with graphs\n",
-    "\n",
-    "## Activity 1. Seven Bridges of Königsberg\n",
-    "\n",
-    "The city of Königsberg in Prussia (now Kaliningrad, Russia) is set on both sides of the Pregel River, and includes two large islands which are connected to each other and the mainland by seven bridges. The problem to be solved is to devise a walk through the city that would cross each bridge once and only once, with the provisos that: the islands could only be reached by the bridges and every bridge once accessed must be crossed to its other end. The starting and ending points of the walk need not be the same. \n",
-    "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/5/5d/Konigsberg_bridges.png\">\n",
-    "\n",
-    "&#9989; Do This - Using the white board, layout this problem as a graph with nodes (land masses) and edges (bridges). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "&#9989; Do This - Also using your white board, write out a representation of your graph as both an adjacency list and an adjacency matrix."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "&#9989; Do This - Write your solution to the Seven Bridges of Königsberg on your graph using a different color dry erase marker. If you can't seem to find a solution, be prepared to explain why."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Activity 2. Sprouts\n",
-    "\n",
-    "This activity introduces you to some aspects of graph theory via a game played by drawing graphs on a sheet of paper. The game is called \"sprouts\" and it is an invention of John Horton Conway and Michael S. Paterson at Cambridge University in the early 1960s.\n",
-    "\n",
-    "Sprouts is a game played by two players, using a sheet of paper and a pen or a pencil. The game begins with a choice by the players of a collection of n \"spots\" or \"nodes\" on the paper. For example, here is a game board with n=3 (images and instructions from https://blogs.csiro.au/helix/game-sprouts/):\n",
-    "\n",
-    "<img src=\"https://i2.wp.com/blog.doublehelix.csiro.au/wp-content/uploads/2015/02/sprouts1.jpg?ssl=1\">\n",
-    "\n",
-    "\n",
-    "1. On your turn, draw a line from one spot to another spot.\n",
-    "1. When you finish drawing your line, put a spot somewhere along its length, splitting the line in two. There are two rules you need to follow:\n",
-    "    * A line can’t cross over itself or other lines.\n",
-    "    * A spot can only have three lines coming out of it.\n",
-    "1. Once you finish your turn, it is your opponent’s turn. Keep alternating turns until it is impossible to draw a line. Whoever played the last move wins!\n",
-    "\n",
-    "Here is the same board after one move:\n",
-    "<img src=\"https://i1.wp.com/blog.doublehelix.csiro.au/wp-content/uploads/2015/02/sprouts2.jpg?ssl=1\">\n",
-    "\n",
-    "Here is an example, completed, game with no more possible moves:\n",
-    "<img src=\"https://i2.wp.com/blog.doublehelix.csiro.au/wp-content/uploads/2015/02/sprouts4.jpg?ssl=1\">\n",
-    "\n",
-    "&#9989; Do This - Within your group, find a partner and play the game. Think about how you could represent the game in a program. Discuss your thoughts with other pairs in your group.\n",
-    "\n",
-    "Also, discuss anything learned about the game in terms of the maximum number of possible moves or the stategies for winning.\n",
-    "\n",
-    "**Decide on one of two people in your group who will share your thoughts with the class.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Activity 3. Working with Networkx\n",
-    "\n",
-    "In the final activity, we will explore a package called **_networkx_** which can be used to construct graphs in python. Navigating the networkx documentation can be somewhat unintuitive, so we have tried to provide you with some direct links to documentation pages on some of the more useful functions. At the top of this list are the `Graph()` constructor and the `draw()` function.\n",
+    "In this activity, we will explore a package called **_networkx_** which can be used to construct graphs in python. Navigating the networkx documentation can be somewhat unintuitive, so we have tried to provide you with some direct links to documentation pages on some of the more useful functions. At the top of this list are the `Graph()` constructor and the `draw()` function.\n",
     "\n",
     "### Resources\n",
     "\n",
