Removing google forms

--- a/Gerrymandering_Model.ipynb
+++ b/Gerrymandering_Model.ipynb
@@ -478,41 +478,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "## Assignment wrap-up\n",
-    "\n",
-    "Please fill out the form that appears when you run the code below.  **You must completely fill this out in order to receive credit for the assignment!**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import HTML\n",
-    "HTML(\n",
-    "\"\"\"\n",
-    "<iframe \n",
-    "\tsrc=\"https://goo.gl/forms/52B64pswdVxD8S1q2\" \n",
-    "\twidth=\"800px\" \n",
-    "\theight=\"600px\" \n",
-    "\tframeborder=\"0\" \n",
-    "\tmarginheight=\"0\" \n",
-    "\tmarginwidth=\"0\">\n",
-    "\tLoading...\n",
-    "</iframe>\n",
-    "\"\"\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Congrats, you're done!\n",
-    "\n",
-    "Submit this assignment by uploading it to the course Desire2Learn web page.  Go to the \"Homework Assignments\" folder, find the dropbox link for Homework #3, and upload it there."
+    "___\n",
+    "## Congrats, you're done!"
    ]
   }
  ],
@@ -532,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
