--- a/Intro_to_Networkx.ipynb
+++ b/Intro_to_Networkx.ipynb
@@ -200,10 +200,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----\n",
-    "# Assignment Wrap-up\n",
-    "\n",
-    "Fill out the following Google Form before submitting your assignment to D2L!"
+    "__\n",
+    "## Congrats, you're done!"
    ]
   },
   {
@@ -211,39 +209,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from IPython.display import HTML\n",
-    "HTML(\n",
-    "\"\"\"\n",
-    "<iframe \n",
-    "\tsrc=\"https://goo.gl/forms/noAwoJd9pEj7A1su1\" \n",
-    "\twidth=\"800px\" \n",
-    "\theight=\"600px\" \n",
-    "\tframeborder=\"0\" \n",
-    "\tmarginheight=\"0\" \n",
-    "\tmarginwidth=\"0\">\n",
-    "\tLoading...\n",
-    "</iframe>\n",
-    "\"\"\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "-----\n",
-    "### Congratulations, we're done!\n",
-    "\n",
-    "Now, you just need to submit this assignment by uploading it to the course <a href=\"https://d2l.msu.edu/\">Desire2Learn</a> web page for today's submission folder (Don't forget to add your name in the first cell)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "&#169; Copyright 2018,  Michigan State University Board of Trustees"
-   ]
+   "source": []
   }
  ],
  "metadata": {
